# reinforcement-learning

./: .gitignore  PRUNING_METHODS.md  README.md  READMEe.md  config.yaml  config_optimized_m3.yaml  main.py  main_jax.py  make_video.py  notes.md  optimize_for_m3.md  pyproject.toml  render_agent.py  requirements.txt  resume_training.py  run_pipeline.py  test.py
checkpoints/: sac_reach-v3_best_actor.pt
docs/: gradient_pruning.md
notebooks/: plotting.ipynb
reinforcement_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/optuna/pick-place-v3/: sac_hybrid_objective_pick_place.db
results/optuna/push-v3/: sac_hybrid_objective_push.db
results/optuna/reach-v3/: hybrid_objective_reach.db
results/ticket_discovery/: metrics_history.json  results.json
scripts/: README_optuna.md  _01_train_dense.py  _02_create_mask.py  _02b_create_maks_gradient.py  _02b_create_mask_gradient.py  _03_train_ticket.py  _04_transfer.py  iterative_pruning.py  optuna_tuning.py  record_agent.py  train_and_discover_tickets.py  train_lth_pipeline.py  train_parallel.py  visualize_results.py
src/: pipeline.py  replay_buffer.py
src/agents/: __init__.py  sac.py
src/data/: replay_buffer.py
src/envs/: __init__.py  envs.py  factory.py  multitask_wrapper.py  vectorized.py
src/jax/: __init__.py
src/jax/agents/: __init__.py  multi_task_sac.py  sac.py
src/jax/buffers/: __init__.py  replay_buffer.py
src/jax/networks/: __init__.py  actor.py  critic.py  mlp.py
src/jax/pruning/: __init__.py  analysis.py  masks.py  saliency.py
src/jax/training/: __init__.py  evaluation.py  loops.py  train_state.py
src/jax/utils/: __init__.py  checkpointing.py  normalizer.py  types.py
src/lth/: __init__.py  gradient_pruning.py  masks.py  model_pruner.py  model_saver.py  pruning.py  recovery.py
src/models/: multi_task_sac.py  sac.py
src/networks/: actor.py  critic.py  mlp.py
src/reinforcement_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/training/: __init__.py  evaluation.py  loops.py  loops_vectorized.py  train_state.py
src/utils/: __init__.py  checkpointing.py  color.py  device.py  jax_setup.py  mlp.py  normalizer.py  seed.py  types.py
tests/: test_jax_metal.py  test_jax_sac.py
